@@ -17,17 +17,18 @@ import static javax.servlet.http.HttpServletResponse.SC_BAD_REQUEST;
 import static javax.servlet.http.HttpServletResponse.SC_NOT_FOUND;
 import static javax.servlet.http.HttpServletResponse.SC_NO_CONTENT;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static tech.pegasys.artemis.beaconrestapi.RestApiConstants.EPOCH;
 import static tech.pegasys.artemis.beaconrestapi.RestApiConstants.ROOT;
 import static tech.pegasys.artemis.beaconrestapi.RestApiConstants.SLOT;
-import static tech.pegasys.artemis.util.async.SafeFuture.completedFuture;
 
 import com.google.common.eventbus.EventBus;
 import com.google.common.primitives.UnsignedLong;
 import io.javalin.http.Context;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -44,22 +45,19 @@ import tech.pegasys.artemis.api.schema.BeaconState;
 import tech.pegasys.artemis.datastructures.util.DataStructureUtil;
 import tech.pegasys.artemis.provider.JsonProvider;
 import tech.pegasys.artemis.storage.ChainStorageClient;
-import tech.pegasys.artemis.storage.CombinedChainDataClient;
-import tech.pegasys.artemis.storage.HistoricalChainData;
 import tech.pegasys.artemis.util.async.SafeFuture;
 
 @ExtendWith(MockitoExtension.class)
 public class BeaconStateHandlerTest {
-  private static tech.pegasys.artemis.datastructures.state.BeaconState beaconStateInternal;
   private static BeaconState beaconState;
   private static Bytes32 blockRoot;
   private static UnsignedLong slot;
-  private static HistoricalChainData historicalChainData = mock(HistoricalChainData.class);
 
   private final JsonProvider jsonProvider = new JsonProvider();
-  private final Context context = mock(Context.class);
   private final String missingRoot = Bytes32.leftPad(Bytes.fromHexString("0xff")).toHexString();
-  private static ChainDataProvider provider;
+
+  private final Context context = mock(Context.class);
+  private final ChainDataProvider provider = mock(ChainDataProvider.class);
 
   @Captor private ArgumentCaptor<SafeFuture<String>> args;
 
@@ -67,22 +65,22 @@ public class BeaconStateHandlerTest {
   public static void setup() {
     final EventBus localEventBus = new EventBus();
     final ChainStorageClient storageClient = ChainStorageClient.memoryOnlyClient(localEventBus);
-    beaconStateInternal = DataStructureUtil.randomBeaconState(11233);
-    storageClient.initializeFromGenesis(beaconStateInternal);
-    CombinedChainDataClient combinedChainDataClient =
-        new CombinedChainDataClient(storageClient, historicalChainData);
-    blockRoot = storageClient.getBestBlockRoot();
-    slot = beaconStateInternal.getSlot();
-    provider = new ChainDataProvider(storageClient, combinedChainDataClient);
+    final tech.pegasys.artemis.datastructures.state.BeaconState beaconStateInternal =
+        DataStructureUtil.randomBeaconState(11233);
     beaconState = new BeaconState(beaconStateInternal);
+    storageClient.initializeFromGenesis(beaconStateInternal);
+    blockRoot = storageClient.getBestBlockRoot();
+    slot = storageClient.getBlockState(blockRoot).get().getSlot();
   }
 
   @Test
   public void shouldReturnNotFoundWhenQueryAgainstMissingRootObject() throws Exception {
     final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(ROOT, List.of(missingRoot)));
-    when(historicalChainData.getFinalizedStateByBlockRoot(Bytes32.fromHexString(missingRoot)))
-        .thenReturn(completedFuture(Optional.empty()));
+    when(provider.isStoreAvailable()).thenReturn(true);
+    when(provider.getStateByBlockRoot(any()))
+        .thenReturn(SafeFuture.completedFuture(Optional.empty()));
 
     handler.handle(context);
 
@@ -92,31 +90,46 @@ public class BeaconStateHandlerTest {
   @Test
   public void shouldReturnBadRequestWhenNoParameterSpecified() throws Exception {
     final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
-    when(context.queryParamMap()).thenReturn(Map.of());
+
+    when(context.queryParamMap()).thenReturn(Collections.emptyMap());
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBadRequestWhenBadSlotSpecified() throws Exception {
     final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of("not-an-int")));
+    when(provider.isStoreAvailable()).thenReturn(true);
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBadRequestWhenBadParamSpecified() throws Exception {
     final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(EPOCH, List.of("not-an-int")));
+    when(provider.isStoreAvailable()).thenReturn(true);
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBeaconStateObjectWhenQueryByRoot() throws Exception {
     final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(ROOT, List.of(blockRoot.toHexString())));
+    when(provider.isStoreAvailable()).thenReturn(true);
+    when(provider.getStateByBlockRoot(any()))
+        .thenReturn(SafeFuture.completedFuture(Optional.of(beaconState)));
 
     handler.handle(context);
 
@@ -128,31 +141,47 @@ public class BeaconStateHandlerTest {
   @Test
   public void shouldReturnBadRequestWhenEmptyRootIsSpecified() throws Exception {
     final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(ROOT, List.of()));
+    when(provider.isStoreAvailable()).thenReturn(true);
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBadRequestWhenEmptySlotIsSpecified() throws Exception {
     final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of()));
+    when(provider.isStoreAvailable()).thenReturn(true);
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBadRequestWhenMultipleParametersSpecified() throws Exception {
     final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of(), ROOT, List.of()));
+    when(provider.isStoreAvailable()).thenReturn(true);
+
     handler.handle(context);
+
     verify(context).status(SC_BAD_REQUEST);
   }
 
   @Test
   public void shouldReturnBeaconStateObjectWhenQueryBySlot() throws Exception {
-    BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of(slot.toString())));
+    when(provider.isStoreAvailable()).thenReturn(true);
+    when(provider.getStateAtSlot(any()))
+        .thenReturn(SafeFuture.completedFuture(Optional.of(beaconState)));
 
     handler.handle(context);
 
@@ -164,20 +193,22 @@ public class BeaconStateHandlerTest {
   @Test
   public void shouldReturnNotFoundWhenQueryByMissingSlot() throws Exception {
     BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of("11223344")));
+    when(provider.isStoreAvailable()).thenReturn(true);
+    when(provider.getStateAtSlot(any())).thenReturn(SafeFuture.completedFuture(Optional.empty()));
+
     handler.handle(context);
+
     verify(context).status(SC_NOT_FOUND);
   }
 
   @Test
   public void shouldReturnNoContentIfStoreNotDefined() throws Exception {
-    ChainStorageClient client = mock(ChainStorageClient.class);
-    CombinedChainDataClient combinedClient =
-        new CombinedChainDataClient(client, historicalChainData);
-    ChainDataProvider provider1 = new ChainDataProvider(client, combinedClient);
-    final BeaconStateHandler handler = new BeaconStateHandler(provider1, jsonProvider);
-    when(client.getStore()).thenReturn(null);
+    final BeaconStateHandler handler = new BeaconStateHandler(provider, jsonProvider);
+
     when(context.queryParamMap()).thenReturn(Map.of(SLOT, List.of("11223344")));
+    when(provider.isStoreAvailable()).thenReturn(false);
 
     handler.handle(context);
 
